# gaia-robot

./: .dockerignore  .gitignore  Coconut.md  Dockerfile  QUICKSTART.md  README.md  TESTING.md  logs
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/skills/: README.md
.github/workflows/: ci.yml  web-swa-deploy.yml
Data/: DECISIONS.md  OPEN_QUESTIONS.md  README.md  SPECIFICATION.md
app/: README.md
infra/: .env.sample  .gitignore  DataExecution.ps1  README.md  TestDataRetrieval.ps1  azuredeploy.free.json  azuredeploy.hobby.json  azuredeploy.json  cosmos_create.py  embed_worker.py  embeddings.py  erd.md  requirements.txt  run-local.ps1
research/: README.md  ResponseDataContext.md  actions-schema.md  actions.schema.json
rust/: .gitignore  Cargo.toml  deny.toml  rust-toolchain.toml
rust/src/: aakkk.rs  actions.rs  auth.rs  base64.rs  coconut.rs  connection.rs  cosmos.rs  daily_log.rs  data_execution.rs  diary.rs  embeddings.rs  engine.rs  executor.rs  flow.rs  health.rs  http_request.rs  http_response.rs  json_repair.rs  llm.rs  main.rs  prompt.rs  pull_data_controller.rs  push_data_controller.rs  response_context.rs  search_history.rs  server.rs  sha1.rs  static_files.rs  storage.rs  test_data_execution.rs  test_data_persistance.rs  test_data_retrieval.rs  test_http.rs  web_search.rs  websocket.rs  write_data_controller.rs
rust/tests/: cli.rs
tests/: .gitignore  README.md
web/: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
(+29 files in other folders)
