[package]
name = "gaia-robot"
version = "0.1.0"
edition = "2021"
# Minimum supported Rust version. Bump deliberately, not accidentally.
rust-version = "1.74"
description = "Gaia robot console application."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Minimal blocking HTTP client (rustls TLS) used only by the dev/local LLM mode
# to reach the GitHub Models endpoint. Chosen over reqwest to avoid pulling in an
# async runtime and to keep the dependency tree small. HTTPS cannot be done with
# std alone, which is why a third-party client is required here.
ureq = "2.12"

[profile.release]
# Smaller, faster release binaries.
lto = true
codegen-units = 1
strip = true
